# VectorShift-Assignment

./: .gitignore  Readme.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  draggableNode.js  store.js  submit.js  toolbar.js  ui.js
frontend/src/Submit/: Modal.js  index.js
frontend/src/nodes/: Input.js  Select.js  index.js  nodes.js
