[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pulkit <kpulkit15234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
python-multipart = "^0.0.9"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
